# hotpath

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  run_loadtest.sh  rust-project.json
.github/workflows/: ci.yml  hotpath-comment.yml  hotpath-profile.yml  hotpath.yml
crates/hotpath/: Cargo.toml
crates/hotpath-macros/: Cargo.toml
crates/hotpath-macros/src/: lib.rs
crates/hotpath-test-all-features/: Cargo.toml
crates/hotpath-test-all-features/examples/: basic.rs  basic_all_features.rs
crates/hotpath-test-smol-async/: Cargo.toml
crates/hotpath-test-smol-async/examples/: basic_smol.rs
crates/hotpath-test-tokio-async/: Cargo.toml
crates/hotpath-test-tokio-async/examples/: basic.rs  benchmark.rs  csv_file_reporter.rs  custom_guard.rs  file_reporter.rs  guard_timer.rs  json_file_reporter.rs  limit.rs  long_running.rs  measure_all_mod.rs  tracing_reporter.rs  unit_test.rs
crates/hotpath/examples/: basic.rs  benchmark.rs  custom_guard.rs  early_returns.rs  nested_allocation_test.rs  unit_test.rs  unsupported_async.rs
crates/hotpath/src/: alloc_count_max.rs  http_server.rs  lib.rs  lib_off.rs  lib_on.rs  output.rs  report.rs  state.rs
crates/hotpath/src/alloc/: allocator.rs  shared.rs
crates/hotpath/src/alloc_bytes_max/: core.rs  guard.rs  report.rs  state.rs
crates/hotpath/src/alloc_bytes_total/: core.rs  guard.rs  report.rs  state.rs
crates/hotpath/src/alloc_count_max/: core.rs  guard.rs  report.rs  state.rs
crates/hotpath/src/alloc_count_total/: core.rs  guard.rs  report.rs  state.rs
crates/hotpath/src/lib_on/: alloc.rs  output.rs
crates/hotpath/src/lib_on/alloc/: allocator.rs  shared.rs
crates/hotpath/src/lib_on/alloc_bytes_max/: report.rs  state.rs
crates/hotpath/src/lib_on/alloc_bytes_total/: core.rs  guard.rs  report.rs  state.rs
crates/hotpath/src/lib_on/alloc_count_max/: report.rs  state.rs
crates/hotpath/src/lib_on/alloc_count_total/: core.rs  guard.rs  report.rs  state.rs
crates/hotpath/src/lib_on/time/: guard.rs  report.rs  state.rs
crates/hotpath/src/time/: guard.rs  report.rs  state.rs
crates/hotpath/tests/: cli_tests.rs
