[workspace]
members = ["crates/hotpath-macros", "crates/hotpath", "crates/hotpath-test-tokio-async", "crates/hotpath-test-smol-async", "crates/hotpath-test-all-features"]
resolver = "2"

[workspace.dependencies]
hotpath-macros = { path = "./crates/hotpath-macros", version = "0.5.1" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
