[package]
name = "hotpath-macros"
version = "0.2.4"
edition = "2021"
repository = "https://github.com/pawurb/hotpath"
description = " A simple Rust profiler that shows exactly where your code spends time and allocates memory"
readme = "../../README.md"
license = "MIT"
categories = ["development-tools"]

[features]
default = []
hotpath = []

[lib]
proc-macro = true

[dependencies]
cfg-if = "1.0.3"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
tokio = { version = "1.47", default-features = false }
