[package]
name = "hotpath-macros"
version = "0.2.8"
edition = "2021"
repository = "https://github.com/pawurb/hotpath"
description = " A simple Rust profiler that shows exactly where your code spends time and allocates memory"
readme = "../../README.md"
license = "MIT"
categories = ["development-tools"]

[features]
default = []
hotpath = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
