[package]
name = "hotpath-macros"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/pawurb/hotpath"
description = "A simple Rust profiler that shows exactly where your code spends time and allocates memory"
readme = "../../README.md"
license = "MIT"
categories = ["development-tools"]

[features]
default = []
hotpath = []
hotpath-off = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
