[package]
name = "hotpath"
version = "0.2.4"
edition = "2024"
repository = "https://github.com/pawurb/hotpath"
description = " A simple Rust profiler that shows exactly where your code spends time and allocates memory"
readme = "../../README.md"
license = "MIT"
categories = ["development-tools"]

[features]
default = []
hotpath = ["hotpath-macros/hotpath"]
hotpath-alloc-bytes-total = []
hotpath-alloc-bytes-max = []
hotpath-alloc-count-total = []
hotpath-alloc-count-max = []

[dependencies]
cfg-if = "1.0.3"
colored = { version = "3.0.0" }
crossbeam-channel = "0.5"
hdrhistogram = { version = "7.5", default-features = false }
# hotpath-macros = { version = "0.2.4" }
hotpath-macros = { path = "../hotpath-macros" }
prettytable-rs = { version = "0.10.0", default-features = false }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
