[package]
name = "hotpath"
version = "0.2.8"
edition = "2021"
repository = "https://github.com/pawurb/hotpath"
description = " A simple Rust profiler that shows exactly where your code spends time and allocates memory"
readme = "../../README.md"
license = "MIT"
categories = ["development-tools"]

[features]
default = []
hotpath = ["hotpath-macros/hotpath"]
hotpath-alloc-bytes-total = []
hotpath-alloc-bytes-max = []
hotpath-alloc-count-total = []
hotpath-alloc-count-max = []

[dependencies]
arc-swap = "1.7"
cfg-if = "1.0"
colored = { version = "3" }
crossbeam-channel = "0.5"
hdrhistogram = { version = "7.5", default-features = false }
hotpath-macros = { version = "0.2.8" }
# hotpath-macros = { path = "../hotpath-macros" }
prettytable-rs = { version = "0.10", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
