[package]
name = "hotpath"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/pawurb/hotpath"
description = " A simple Rust profiler that shows exactly where your code spends time and allocates memory"
readme = "../../README.md"
license = "MIT"
categories = ["development-tools"]

[[bin]]
name = "hotpath"
path = "bin/main.rs"

[features]
default = []
hotpath = ["hotpath-macros/hotpath", "hotpath-macros/hotpath-off"]
hotpath-alloc-bytes-total = ["dep:tokio"]
hotpath-alloc-bytes-max = ["dep:tokio"]
hotpath-alloc-count-total = ["dep:tokio"]
hotpath-alloc-count-max = ["dep:tokio"]
hotpath-off = []
hotpath-ci = []

[dependencies]
arc-swap = "1.7"
cfg-if = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = { version = "3" }
crossbeam-channel = "0.5"
eyre = "0.6"
hdrhistogram = { version = "7.5", default-features = false }
hotpath-macros = { version = "0.3.0" }
# hotpath-macros = { path = "../hotpath-macros" }
prettytable-rs = { version = "0.10", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt"], optional = true }
ureq = { version = "3.1", features = ["json"] }
